[tool.poetry]
name        = "blueprint"
version     = "0.1.0"
description = "A blueprint template for Python projects."
authors     = ["Aymane Boumaaza <aymaneboumaaza@gmail.com>"]
license     = "MIT"
readme      = "README.md"

[tool.poetry.dependencies]
python        = "^3.8"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
flake8     = "^4.0.1"
black      = "^22.1.0"
pytest-cov = "^3.0.0"
pytest     = "^5.2"
pre-commit = "^2.17.0"
poethepoet = "^0.13.1"
pylint     = "^2.12.2"
bandit     = "^1.7.4"
autoflake  = "^1.4"

[tool.poe.tasks]

    [tool.poe.tasks.format]
    help = "Run black on the code base"
    cmd  = "black ."

    [tool.poe.tasks.bandit]
    help = "Run bandit on the code base"
    cmd = "bandit -c bandit.yaml -r blueprint/ tests/"

    [tool.poe.tasks.pylint]
    help = "Run pylint on the code base"
    cmd = "pylint blueprint/ tests/"

    [tool.poe.tasks.flake8]
    help = "Run flake8 on the code base"
    cmd = "flake8 blueprint/* tests/*"

    [tool.poe.tasks.test]
    help = "Run pytest on the code base"
    cmd = "pytest -v --cov=blueprint --cov-report=term"

    [tool.poe.tasks.pre-commit]
    help = "Run pre-commit on the code base before commit"
    cmd = "pre-commit run --files */* *"


[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
